[gd_scene load_steps=3 format=3 uid="uid://cnel3annmy5md"]

[ext_resource type="Script" path="res://scenes/Gyms/brewing/drink_property_change.gd" id="1_01wrf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7ss6"]

[node name="DrinkPropertyDelta" type="HBoxContainer"]
script = ExtResource("1_01wrf")

[node name="PropertyName" type="Label" parent="."]
layout_mode = 2
text = "Drink Property"

[node name="PropertyDelta" type="Label" parent="."]
layout_mode = 2
mouse_filter = 1
text = "0.01/s"

[node name="ParticipatingIngredientsPanel" type="PanelContainer" parent="PropertyDelta"]
visible = false
z_index = 10
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 117.0
offset_bottom = 55.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i7ss6")

[node name="ParticipatingIngredients" type="VBoxContainer" parent="PropertyDelta/ParticipatingIngredientsPanel"]
layout_mode = 2

[connection signal="mouse_entered" from="PropertyDelta" to="." method="_on_property_delta_mouse_entered"]
[connection signal="mouse_exited" from="PropertyDelta" to="." method="_on_property_delta_mouse_exited"]
